add profile and image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
 
-    <div id="container"></div>
+    <div id="container">
+      <div id="profile">
+         <img src="./assets/Avatar.png" alt="foto de Maires com fone sem fio sorrindo de camisa branca e fundo roxo">
+      </div>
+
+    </div>
 
   </body>
 </html>
