add font family and paragraph

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +14,11 @@
 
     <div id="container">
       <div id="profile">
-         <img src="./assets/Avatar.png" alt="foto de Maires com fone sem fio sorrindo de camisa branca e fundo roxo">
+         <img 
+          src="./assets/Avatar.png" 
+          alt="foto de Maires com fone sem fio sorrindo de camisa branca e fundo roxo">
+
+          <p>@mairess</p>
       </div>
 
     </div>
