--- a/index.html
+++ b/index.html
@@ -20,8 +20,20 @@
 
           <p>@mairess</p>
       </div>
-
+      <ul>
+        <li>
+          <a href="#">Inscrever-se no NLW</a>
+        </li>
+        <li>
+           <a href="#">Baixar meu e-book</a>
+        </li>
+        <li>
+          <a href="https://github.com/mairess" target="_blank">Ver meu portfólio</a>
+        </li>
+        <li>
+          <a href="https://app.rocketseat.com.br/discover" target="_blank">Conheça o Discover</a>
+        </li>
+      </ul>
     </div>
-
   </body>
 </html>
