--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
           <a href="https://app.rocketseat.com.br/discover" target="_blank">Conheça o Discover</a>
         </li>
       </ul>
+      <div id="social-links">
+        <ion-icon name="logo-github"></ion-icon>
+        <ion-icon name="logo-instagram"></ion-icon>
+        <ion-icon name="logo-youtube"></ion-icon>
+        <ion-icon name="logo-linkedin"></ion-icon>
+      </div>
     </div>
+    <script 
+    type="module" 
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js">
+    </script>
+    <script 
+    nomodule 
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js">
+    </script>
   </body>
 </html>
