--- a/index.html
+++ b/index.html
@@ -35,10 +35,19 @@
         </li>
       </ul>
       <div id="social-links">
-        <ion-icon name="logo-github"></ion-icon>
+        <a href="https://github.com/mairess" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+
+        <a href="#" target="_blank">
         <ion-icon name="logo-instagram"></ion-icon>
+          </a>
+        <a href="https://www.youtube.com/@e-maires" target="_blank">
         <ion-icon name="logo-youtube"></ion-icon>
+          </a>
+        <a href="https://linkedin.com/in/mairess" target="_blank">
         <ion-icon name="logo-linkedin"></ion-icon>
+          </a>
       </div>
     </div>
     <script 
