--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <ion-icon name="logo-linkedin"></ion-icon>
           </a>
       </div>
+
+      <footer>
+        Feito com ♥ pela 
+        <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
+      </footer>
     </div>
     <script 
     type="module" 
