--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,8 +51,7 @@
       </div>
 
       <footer>
-        Feito com ♥ pela 
-        <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
+        Feito com ♥ pela <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
       </footer>
     </div>
     <script 
