--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p>@mairess</p>
       </div>
 
-      <div id="switch">
+      <div id="switch" onclick="toggleMode()">
         <button></button>
         <span></span>
       </div>
@@ -68,5 +68,6 @@
     nomodule 
     src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js">
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
